syntax = "proto3";

package api.member;

import "google/protobuf/any.proto";

option go_package = "edu/api/member;member";
option java_multiple_files = true;
option java_package = "api.member";

message ApiReply {
    int32 code = 1;
    string reason = 2;
    string message = 3;
    int32 ttl = 4;
    int32 count = 5;
    repeated google.protobuf.Any details = 6;
}

message Member {}

message MemberAssets {}
