syntax = "proto3";

package api.tiku;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "edu/api/tiku;tiku";
option java_multiple_files = true;
option java_package = "api.ss";

message ApiReply {
  int32 code = 1;
  string reason = 2;
  string message = 3;
  int32 ttl = 4;
  int32 pageIndex = 5;
  int32 pageSize = 6;
  int32 count = 7; // total
  repeated google.protobuf.Any data = 8;
}

message Choice {
  uint64 id = 1;
  int32 ty = 2;
  int32 level = 3;
  string pics = 4;
  string title = 5;
  string answer = 6;
  google.protobuf.Timestamp createdAt = 7;
}

message Exercise {
  uint64 id = 1;
  int32 ty = 2;
  int32 level = 3;
  string pics = 4;
  string title = 5;
  string answer = 6;
  google.protobuf.Timestamp createdAt = 7;
}